# rust-protoc-bin-vendored

./: Cargo.toml  update-bin.sh
protoc-bin-vendored/: Cargo.toml
protoc-bin-vendored-arch-template/: Cargo.toml
protoc-bin-vendored-linux-aarch_64/: Cargo.toml
protoc-bin-vendored-linux-ppcle_64/: Cargo.toml
protoc-bin-vendored-linux-s390_64/: Cargo.toml
protoc-bin-vendored-linux-x86_32/: Cargo.toml
protoc-bin-vendored-linux-x86_64/: Cargo.toml
protoc-bin-vendored-macos-aarch_64/: Cargo.toml
protoc-bin-vendored-macos-x86_64/: Cargo.toml
protoc-bin-vendored-win32/: Cargo.toml
protoc-bin-vendored/src/: lib.rs
