[package]
name = "protoc-bin-vendored"
version.workspace = true
edition = "2021"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
license = "MIT"
homepage = "https://github.com/stepancheg/rust-protoc-bin-vendored/"
repository = "https://github.com/stepancheg/rust-protoc-bin-vendored/"
description = """
protoc binaries compiled by Google and bundled in this crate.
"""

[lib]
doctest = true
bench = false

[dependencies]
protoc-bin-vendored-linux-x86_64 =   { workspace = true }
protoc-bin-vendored-linux-x86_32 =   { workspace = true }
protoc-bin-vendored-linux-aarch_64 = { workspace = true }
protoc-bin-vendored-linux-ppcle_64 = { workspace = true }
protoc-bin-vendored-linux-s390_64 =  { workspace = true }
protoc-bin-vendored-macos-aarch_64 = { workspace = true }
protoc-bin-vendored-macos-x86_64 =   { workspace = true }
protoc-bin-vendored-win32 =          { workspace = true }

[package.metadata.docs.rs]
all-features = true
